--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
 		"start": "echo 'Not configured yet'",
 		"dev:front": "concurrently --kill-others \"npm run scss\" \"npm run rollup\" \"node ./server.js\"",
 		"scss": "sass --watch public/src/css/:public/dist/css",
-		"rollup": "rollup --watch --config rollup.config.cjs"
+		"rollup": "rollup --watch --config rollup.config.cjs",
+		"minify:js": "uglifyjs public/dist/js/silverBox.js -o public/dist/js/silverBox.min.js",
+		"minify:css": "echo 'Not configured yet'",
+		"minify": "npm run minify:js && npm run minify:css"
 	},
 	"repository": {
 		"type": "git",
@@ -27,6 +30,7 @@
 		"babel-preset-es2015": "^6.24.1",
 		"concurrently": "^7.6.0",
 		"rollup": "^3.3.0",
-		"rollup-plugin-babel": "^3.0.7"
+		"rollup-plugin-babel": "^3.0.7",
+		"uglify-js": "^3.17.4"
 	}
 }
