--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
 	"description": "SilverBox is a lightweight and versatile JavaScript library that enables you to effortlessly create customizable modals and alerts for your web applications. Built with pure JavaScript and zero dependencies, SilverBox empowers developers to easily integrate stylish and interactive pop-up components without adding unnecessary bloat. Harness the power of CSS variables to customize the visual styles, seamlessly adapting to your application's design system. Experience the simplicity and flexibility of SilverBox for beautiful modals and alerts.",
 	"scripts": {
 		"dev:front": "concurrently --kill-others \"npm run scss\" \"npm run rollup\" \"node ./server.js\"",
-		"scss": "sass --watch public/src/css/:public/dist/css",
-		"rollup": "rollup --watch --config rollup.config.mjs",
-		"minify:js": "gulp minify:js",
-		"minify:css": "gulp minify:css",
-		"minify": "npm run minify:js && npm run minify:css"
+		"scss": "sass --style compressed --watch public/src/css/:public/dist/css",
+		"rollup": "rollup --watch --config rollup.config.mjs"
 	},
 	"repository": {
 		"type": "git",
@@ -25,13 +22,9 @@
 		"@babel/core": "^7.21.8",
 		"@babel/preset-env": "^7.21.5",
 		"@rollup/plugin-babel": "^6.0.3",
+		"@rollup/plugin-terser": "^0.4.1",
 		"concurrently": "^8.0.1",
-		"cssnano": "^6.0.1",
 		"express": "^4.18.2",
-		"gulp": "^4.0.2",
-		"gulp-postcss": "^9.0.1",
-		"gulp-rename": "^2.0.0",
-		"gulp-uglify": "^3.0.2",
 		"postcss": "^8.4.23",
 		"postcss-cli": "^10.1.0",
 		"rollup": "^3.21.7",
