--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
 		"prettier": "2.8.8"
 	},
 	"lint-staged": {
-		"*.{*}": "prettier --write"
+		"*.{js,jsx,ts,tsx,json,css,scss,md}": [
+			"prettier --write"
+		],
+		"!public/dist/**/*": "prettier --write"
 	}
 }
