--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.1.0",
 	"description": "SilverBox is a lightweight and versatile JavaScript library that enables you to effortlessly create customizable modals and alerts for your web applications. Built with pure JavaScript and zero dependencies, SilverBox empowers developers to easily integrate stylish and interactive pop-up components without adding unnecessary bloat. Harness the power of CSS variables to customize the visual styles, seamlessly adapting to your application's design system. Experience the simplicity and flexibility of SilverBox for beautiful modals and alerts.",
 	"scripts": {
-		"start": "cross-env NODE_ENV=production sass --style compressed --no-source-map public/src/css/:public/dist/css && rollup --config rollup.config.mjs && node ./server.js",
+		"start": "sass --style compressed --no-source-map public/src/css/:public/dist/css && cross-env NODE_ENV=production rollup --config rollup.config.mjs && node ./server.js",
 		"dev:front": "cross-env NODE_ENV=development concurrently --kill-others \"npm run scss\" \"npm run rollup\" \"node ./server.js\"",
 		"scss": "sass --watch public/src/css/:public/dist/css",
 		"rollup": "rollup --watch --config rollup.config.mjs",
